--- a/languages/beautiful-taxonomy-filters-de_DE.po
+++ b/languages/beautiful-taxonomy-filters-de_DE.po
@@ -3,24 +3,24 @@ msgstr ""
 "Project-Id-Version: Beautiful taxonomy filter\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-11-10 09:35+0800\n"
-"PO-Revision-Date: Thu Feb 26 2015 17:57:47 GMT+0100 (CET)\n"
+"PO-Revision-Date: 2016-01-09 11:05+0100\n"
 "Last-Translator: bonness <mbo@macbo.de>\n"
 "Language-Team: \n"
-"Language: German\n"
-"Plural-Forms: nplurals=2; plural=n != 1\n"
+"Language: de\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Generator: Loco - https://localise.biz/\n"
+"X-Generator: Poedit 1.8.6\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-KeywordsList: _:1;gettext:1;dgettext:2;ngettext:1,2;dngettext:2,3;"
 "__:1;_e:1;_c:1;_n:1,2;_n_noop:1,2;_nc:1,2;__ngettext:1,2;__ngettext_noop:1,2;"
 "_x:1,2c;_ex:1,2c;_nx:1,2,4c;_nx_noop:1,2,3c;_n_js:1,2;_nx_js:1,2,3c;"
 "esc_attr__:1;esc_html__:1;esc_attr_e:1;esc_html_e:1;esc_attr_x:1,2c;"
 "esc_html_x:1,2c;comments_number_link:2,3;t:1;st:1;trans:1;transChoice:1,2\n"
+"X-Loco-Target-Locale: de_DE\n"
 "X-Poedit-SearchPath-0: .\n"
-"X-Loco-Target-Locale: de_DE"
 
 #: ../admin/class-beautiful-taxonomy-filters-admin.php:92
 msgid "Taxonomy Filters"
@@ -44,9 +44,7 @@ msgstr "Für diese Post Types aktivieren:"
 
 #: ../admin/class-beautiful-taxonomy-filters-admin.php:158
 msgid "Exclude these taxonomies:"
-msgstr ""
-"Diese Taxonomien ausschließen:\n"
-"\n"
+msgstr "Diese Taxonomien ausschließen:"
 
 #: ../admin/class-beautiful-taxonomy-filters-admin.php:167
 msgid "Disable the select2 library:"
@@ -104,19 +102,19 @@ msgid ""
 "the post type aren't connected to one or more taxonomies you wont see any "
 "results."
 msgstr ""
-"Es sind die für das Filtern genutzten Post Types auszuwählen.</br> "
-"<b>Hinweis:</b> Es werden keine Ergebnisse angezeigt, wenn die Post Types "
-"nicht mit mindestens einer Taxonomie verbunden ist."
+"Es sind die für das Filtern genutzten Post Types auszuwählen.</br> <b>Hinweis:"
+"</b> Es werden keine Ergebnisse angezeigt, wenn die Post Types nicht mit "
+"mindestens einer Taxonomie verbunden ist."
 
 #: ../admin/partials/beautiful-taxonomy-filters-admin-display.php:33
 msgid ""
-"Exclude any taxonomies you don't want the users to be able to filter on."
-"</br> <b>Note:</b> Only affects taxonomies that are connected to post types "
-"you have selected"
+"Exclude any taxonomies you don't want the users to be able to filter on.</br> "
+"<b>Note:</b> Only affects taxonomies that are connected to post types you have "
+"selected"
 msgstr ""
-"Taxonomien, die vor den Benutzern verborgen werden sollen, sind "
-"auszuschließen.</br> <b>Hinweis:</b> Das betrifft nur Taxonomien, die "
-"bereits zu den Post Types passend zugeordnet wurden. "
+"Taxonomien, die vor den Benutzern verborgen werden sollen, sind auszuschließen."
+"</br> <b>Hinweis:</b> Das betrifft nur Taxonomien, die bereits zu den Post "
+"Types passend zugeordnet wurden. "
 
 #: ../admin/partials/beautiful-taxonomy-filters-admin-display.php:36
 msgid "Save Changes."
@@ -124,11 +122,10 @@ msgstr "Änderungen sichern."
 
 #: ../admin/partials/beautiful-taxonomy-filters-admin-display.php:37
 msgid ""
-"<i>success! Your previously ugly taxonomy filtering is now oh so beautiful!"
-"</i>"
+"<i>success! Your previously ugly taxonomy filtering is now oh so beautiful!</i>"
 msgstr ""
-"<i>Großartig! Die vorher unansehnliche Taxonomiefilterung sieht jetzt "
-"richtig gut aus!</i>"
+"<i>Großartig! Die vorher unansehnliche Taxonomiefilterung sieht jetzt richtig "
+"gut aus!</i>"
 
 #: ../admin/partials/beautiful-taxonomy-filters-admin-display.php:40
 msgid ""
@@ -149,9 +146,9 @@ msgstr "Datei in Deinem Template. Platziert werden sollte es irgendwo über"
 #: ../admin/partials/beautiful-taxonomy-filters-admin-display.php:41
 msgid ""
 "<b>Note:</b> The layout of archive.php may differ drastically between "
-"different themes. We can't help you with the placement of the function in "
-"your theme so just try some locations (you can just remove the function "
-"again if something breaks) or ask in your themes support forum. Best of luck!"
+"different themes. We can't help you with the placement of the function in your "
+"theme so just try some locations (you can just remove the function again if "
+"something breaks) or ask in your themes support forum. Best of luck!"
 msgstr ""
 "<b>Hinweis:<b/> Der Aufbau der archive.php kann von Theme zu Theme stark "
 "variieren. Wir können bei der Platzierung der Funktionen nicht individuell "
@@ -217,18 +214,17 @@ msgstr "Funktionalität für das Filtermodul. Dieses sind optionale Einstellunge
 
 #: ../admin/partials/beautiful-taxonomy-filters-style-section-display.php:15
 msgid ""
-"This section lets you control the layout and design of the filter you can "
-"use in your archive pages."
+"This section lets you control the layout and design of the filter you can use "
+"in your archive pages."
 msgstr ""
-"Diese Bereich ermöglicht Layout- und Design-Einstellungen auf der Archiv-"
-"Seite."
+"Diese Bereich ermöglicht Layout- und Design-Einstellungen auf der Archiv-Seite."
 
 #: ../public/partials/beautiful-taxonomy-filters-public-display.php:90 ..
-#: public/partials/beautiful-taxonomy-filters-public-display.php:119 ..
+#: public/partials/beautiful-taxonomy-filters-public-display.php:119
 #: widgets/beautiful-taxonomy-filters-widget.php:244 ../widgets/beautiful-
 #: taxonomy-filters-widget.php:273
 msgid "All "
-msgstr "Alle"
+msgstr "Alle "
 
 #: ../public/partials/beautiful-taxonomy-filters-public-display.php:129 ..
 #: widgets/beautiful-taxonomy-filters-widget.php:282
@@ -251,7 +247,7 @@ msgid "Result of filter: %d"
 msgstr "Ergebnis der Filterung: %d"
 
 #: ../public/partials/beautiful-taxonomy-filters-public-info-display.php:79 ..
-#: public/partials/beautiful-taxonomy-filters-public-info-display.php:116 ..
+#: public/partials/beautiful-taxonomy-filters-public-info-display.php:116
 #: widgets/beautiful-taxonomy-filters-info-widget.php:129 ../widgets/beautiful-
 #: taxonomy-filters-info-widget.php:167
 msgid "All"
